Feature add more config options: Prefix Saved Locations Hotbar message Rules Ban appeal

--- a/ParadoxConfig/Form1.resx
+++ b/ParadoxConfig/Form1.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAMMOAADDDgAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD///8A////AP///wb///4Y////H////x////8f////H////x////8f////IP///yD///8f////H///
+        /yD///8g////IP///yD///8g////IP///yD///8g////GP///wX///8A////AAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP///wD///8DsLHlT1VUorpQTojKUlCLylJQi8pSUIvJUlCLyVJQi8pSUIvKUlCLylJQ
+        i8pSUIvKUlCLylJQi8pSUIvKUlCLylJQi8pSUIvKUlCLylFPispZV462u7zQR////wL///8AAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD+/v8ApaLkAPj3/CdbWtPBBweg/wIBW/8EAFb/BABW/wMAVv8CAFb/AgBW/wIA
+        Vv8CAFb/AgBW/wIAVv8CAVT/AgFV/wIAVv8CAFb/AgBW/wIAVv8CAFb/AgFW/wcHWP9oaJe0////HeXk
+        7AD///8AAAAAAAAAAAAAAAAAAAAAAPz8/gD///8FkZDddxgZxPkCBL//AwOA/wUBVv8FAVb/AwFV/wIB
+        VP8CAVT/AwFV/wMBVv8CAVf/AwFY/wMCVv8DAlf/AwFY/wMBWP8DAVj/AwFY/wMBWP8DAVj/AgBX/yQh
+        a/OlpcFj////Avz8/QAAAAAAAAAAAAAAAAAAAAAA+/z+AP///wZ8e9iJDg/C/gIEwv8FBK7/BQJi/wMC
+        VP8DAVT/AgJH/wICQ/8DAUv/AwJX/wICYf8CAmn/AwJv/wQBcv8DAXP/AwJ0/wQCdP8EAXT/BAF0/wQB
+        dP8DAHT/FBN8+4mKunf///8D+/v8AAAAAAAAAAAAAAAAAAAAAAD+/v8AAAAAANjZ8z1BQszaAgO//wUE
+        wf8GBIv/BAJV/wMBVv8DAkz/AAE7/wAAP/8AAE//AABe/wAAaf8AAHL/AAB3/wEBfP8CAn7/AgJ+/wMB
+        ff8EAXz/BAF8/wQCfP9OTaHP6en0Mk5QowD+/v8AAAAAAAAAAAAAAAAAAAAAAP///wD+/v8A////CZeW
+        4IEZGcP6BQPC/wYEtf8EAmr/AwFV/wIBU/8fH1f9NDRi7i0saOguLXXoLS5/6C0th+g0NY/wFheB/QEA
+        d/8CAXf/AwJ6/wQCe/8CAXr/IB+H9aalzXH///8F////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//
+        /wC/vesA9vX7KVhW0MYGBMD/BgPD/wUDmf8EAVn/AgBU/zs5dvfLyteM2NjgQtPT30DT0+FA3dzpRLu7
+        054oKHv8AQFj/wICZv8EAnb/BAJ7/wgHff9lZa23////H9/f7gD///8AAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP///wD///8Er6/nZSUkxvEEAsL/BQS7/wMDdf8DAlL/CAdR/2Zlj7T///8c5uftANXV
+        6AD6+v0lWlefwwcDcP8DAm7/AgJy/wMCe/8CAXv/MDCS6cHC3lP///8C////AAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA////AOvs+QD///8ZbW3WrgoJwv8EA8T/BASl/wECWP8AAEj/Hx9W9aSl
+        tnH///8F////BpybznsaGpH4AgGJ/wMChv8BAn3/AAF9/w4Og/6Af7ua////Efn4/AD///8AAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA////AP///wHKye5MNTXL5QIBw/8FBcH/BQN9/wMC
+        Rf8CAzv/Skxp0enp6jPl6PY0R0i31AICoP8DA5//BAKL/wICff8BAXz/RUSc2N/d7ToAAFoA////AAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD///8A+vv+AP///w6FhtyTExLE/QUE
+        xP8GBav/AwJR/wABNP8PEDL8k5KcoJeW3Z4SEbP8AwOw/wQEoP8EAYH/AwB9/xoZh/iam8h8////CP//
+        /wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD///8AQEbEAOPk
+        9jVJSs7UBATB/wQEwf8EA4D/AQAu/wAAH/85OFb2Pz7B9gQCvP8GBLj/BAOP/wQBf/8HBH//W1uowfz8
+        /SXLyuQA////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD///8A////B6Gg4ncdHcT3AwLC/wYEsv8DAkb/AQAb/wQDWf8GBL3/BAPA/wUDpv8EAoD/AwB+/ysp
+        kO63t9he////Av///wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP///wDX2PEA///9Il9g0r0HB8H/BQTF/wUEhv8DAjP/BQSd/wYEw/8FBLj/AwKL/wMA
+        ff8MCoH/dnW1pv///xX19foA////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///wD///8CuLvpWystxu0FAsT/BwS5/wYEkf8GBL7/BgTB/wUD
+        n/8DAn7/AwB9/z07md/S0udD////AP///wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA////APb2/AD///8VeHfZpA8MxP8GA8P/BgTC/wYE
+        wv8GBLP/AgOF/wECff8WFYT7kY/DiP///wv9/f4A////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA////AAAAAADV0/FDQD3N3wUD
+        wv8FBMD/BgW//wMDlv8CA33/BAR8/1JTosvw8fctq6zRAP///wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD///8A/Pz+AP//
+        /wuSkN6IFxbC+wMEwP8EBKz/AgKB/wIBff8kI4zzq6vRaf///wT///8AAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD///8Aq6vhAO/v+C1RUc7MBQO6/wIAjf8BAHr/Cgh//2xrsLH///8b6ur0AP///wAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD///8A////BaSl52cvLLDoHRuL+BwaiPg7OpbaxcTfSv///wH///8AAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///wDLzusA7+/5Ebaz20qxrthhr63YYLm63ED///8K9/f7AP//
+        /wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA////////////////////////////////+AAAH/AAAA/wAAAP4AAAB+AA
+        AAfwAAAP8AAAD/gAAB/4AYAf/AAAP/wAAH/+AAB//wAA//8AAP//gAH//4AD///AA///4Af//+AH///w
+        D///8A////gf//////////////////////8=
+</value>
+  </data>
 </root>
